otto: phase 0+1 — project scaffolding, config, store, prompts, opencode integration
Phase 0 (0.1-0.8):
- Go module init with full directory structure
- Core dependencies (17 packages, lipgloss pinned to v1.x)
- Config types matching design.md schema with JSONC loading and deep merge
- Logging with slog + charmbracelet/log (TTY detection, --verbose flag)
- File-based store with frontmatter, flock locking
- Prompt template embedding with user override support
- OpenCode permission config writer (yolo mode)

Phase 1 (1.0-1.5):
- LLMClient interface + MockLLMClient for testing
- Health check via raw HTTP (not SDK) with 5s connect + 10s total timeout
- ServerManager lifecycle (EnsureRunning, Shutdown, auth headers)
- SDK session helpers with directory scoping
- JSON response parsing with markdown stripping and retry
- Multi-model review pipeline (generate → critique → refine)

Post-review fixes:
- Added OPENCODE_SERVER_USERNAME env var and config field (C1)
- Added 5s connect timeout via custom http.Transport (C2)
- Added missing deps: goldmark, huh, go-github, githubv4, ratelimit (C3)
- Moved opencode-sdk-go to direct dependency (I8)
- Added malformed JSONC and deep merge preservation tests (I1)
- Added flock timeout test (I2)
- Added HealthCheck and ServerManager unit tests (I9)
- Wired contextData into ReviewPipeline.Review (I6)
- Added future Levenshtein heuristic comment (I5)
- Added debug logging for frontmatter parse failures (M4)
- Added warning log for critique template fallback (M7)
- Added event streaming TODO on LLMClient interface (I4)

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+# copilot dialogs
+.specstory
+
+# Otto binary
+otto
+/bin/
+
+# Vendor
+vendor/
+
+# Otto runtime
+.otto/logs/
